support to change user email

--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -2,7 +2,8 @@
 
 <div class="ui attached stackable menu">
     <div class="ui container">
-        <a class="item"><i class="home icon"></i>@Messages("menu.home")</a>
+        <!--<a class="item" href="/"><i class="home icon"></i>@Messages("menu.home")</a>-->
+        <!--<a class="item" href="/chat"><i class="chat icon"></i>@Messages("apps.chat")</a>-->
 
         <div class="right menu">
 
