--- a/app/views/common/sideMenu.scala.html
+++ b/app/views/common/sideMenu.scala.html
@@ -11,4 +11,7 @@
     <a class='@activeLink("/password") item' href="/password">
         @Messages("password.menu")
     </a>
+    <a class='@activeLink("/email") item' href="/email">
+        @Messages("email.menu")
+    </a>
 </div>
