--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,3 +12,10 @@ body > .grid {
 #profile-table {
   width: 100%;
 }
+
+.fullpage {
+  width: 100%;
+  height: 100%;
+  border:none;
+  seamless='seamless';
+}
