--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -19,13 +19,13 @@
             <div class="field">
                 <div class="ui left icon input">
                     <i class="user icon"></i>
-                    <input type="text" name="email" placeholder="E-Mail">
+                    <input type="text" name="username" placeholder='@Messages("username")'>
                 </div>
             </div>
             <div class="field">
                 <div class="ui left icon input">
                     <i class="lock icon"></i>
-                    <input type="password" name="password" placeholder="Passwort">
+                    <input type="password" name="password" placeholder='@Messages("password")'>
                 </div>
             </div>
             <button id="submit" type="submit" value="submit" class="ui fluid large green submit button">@Messages("sign.in")</button>
