--- a/app/views/common/sideMenu.scala.html
+++ b/app/views/common/sideMenu.scala.html
@@ -5,7 +5,7 @@
 }
 
 <div class="ui secondary vertical menu">
-    <a class='@activeLink("/") item' href="/">
+    <a class='@activeLink("/profile") item' href="/">
         @Messages("profile.menu")
     </a>
     <a class='@activeLink("/password") item' href="/password">
