--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -6,32 +6,39 @@
     @mainMenu(Option(user))
 
     <div class="ui text container" id="menu-spacer">
-        <div class="ui grid">
-            <div class="six wide column">
-                @sideMenu()(request, messages)
+        <div class="ui three column stackable grid">
+            <div class="column">
+                <div class="ui card">
+                    <div class="padded">
+                    <i class="massive inverted green file icon">
+                    </i>
+                    </div>
+                    <div class="content">
+                        <a class="header">@Messages("apps.files")</a>
+                    </div>
+                </div>
             </div>
-            <div class="ten wide column">
-                <h2 class="ui header">@Messages("profile.title")</h2>
-                <table class="ui definition table" id="profile-table">
-                    <tbody>
-                    <tr>
-                        <td class="four wide column">@Messages("first.name"):</td>
-                        <td class="right aligned">@user.firstName.getOrElse("None")</td>
-                    </tr>
-                    <tr>
-                        <td>@Messages("last.name"):</td>
-                        <td class="right aligned">@user.lastName.getOrElse("None")</td>
-                    </tr>
-                    <tr>
-                        <td>@Messages("full.name"):</td>
-                        <td class="right aligned">@user.fullName.getOrElse("None")</td>
-                    </tr>
-                    <tr>
-                        <td>@Messages("email"):</td>
-                        <td class="right aligned">@user.email.getOrElse("None")</td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="column">
+                <div class="ui card">
+                    <div class="padded">
+                        <i class="massive inverted green calendar icon">
+                        </i>
+                    </div>
+                    <div class="content">
+                        <a class="header">@Messages("apps.calendar")</a>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="ui card">
+                    <div class="padded">
+                        <i class="massive inverted green car icon">
+                        </i>
+                    </div>
+                    <div class="content">
+                        <a class="header">@Messages("apps.carsharing")</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
