using md5 as default hash and added landing page/menu

--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -3,7 +3,9 @@
 <div class="ui attached stackable menu">
     <div class="ui container">
         <a class="item" href="/"><i class="home icon"></i>@Messages("menu.home")</a>
-        <!--<a class="item" href="/chat"><i class="chat icon"></i>@Messages("apps.chat")</a>-->
+        <a class="item" href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
+        <a class="item" href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
+        <a class="item" href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
 
         <div class="right menu">
 
