--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -5,9 +5,12 @@
 @mainLayout(Messages("home.title")) {
     @mainMenu(Option(user))
 
-    <div class="ui text container" id="menu-spacer">
-        <div class="ui three column stackable grid">
+<div class="ui middle aligned center aligned grid">
+    <div class="column login-column">
+        <img class="ui centered medium image" src="/assets/images/wvg_logo_quad.png">
+        <!--<div class="ui three column stackable grid">
             <div class="column">
+                <a href="/calendar">
                 <div class="ui card">
                     <div class="padded">
                     <i class="massive inverted green file icon">
@@ -17,6 +20,7 @@
                         <a class="header">@Messages("apps.files")</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="column">
                 <div class="ui card">
@@ -40,6 +44,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
+</div>
 }
