no password reset function and running_pid startup fix

--- a/app/views/nopassword.scala.html
+++ b/app/views/nopassword.scala.html
@@ -1,6 +1,6 @@
 @import common._
 
-@(signInForm: Form[forms.SignInForm.Data], uid: String = "")(implicit request: RequestHeader, messages: Messages)
+@(signInForm: Form[forms.NoPasswordForm.Data], uid: String)(implicit request: RequestHeader, messages: Messages)
 
 @import com.mohiva.play.silhouette.impl.providers.oauth2.ClefProvider
 
@@ -10,25 +10,26 @@
         <h2 class="ui center aligned header">
             <img src='@routes.Assets.at("images/wvg_logo_quad.png")' class="ui tiny image">
             <div class="content">
-                @Messages("sign.in.credentials")
+                @Messages("sign.in.no.password")
             </div>
         </h2>
-        @helper.form(action = routes.CredentialsAuthController.authenticate(), 'class -> "ui large form" ) {
+        @helper.form(action = routes.LdapController.nopassword, 'class -> "ui large form" ) {
         @helper.CSRF.formField
         <div class="ui segment">
             <div class="field">
                 <div class="ui left icon input">
-                    <i class="user icon"></i>
-                    <input type="text" name="username" value="@uid" placeholder='@Messages("username")'>
+                    <i class="lock icon"></i>
+                    <input type="password" name="password-new" placeholder='@Messages("password.new")'>
                 </div>
             </div>
             <div class="field">
                 <div class="ui left icon input">
                     <i class="lock icon"></i>
-                    <input type="password" name="password" placeholder='@Messages("password")'>
+                    <input type="password" name="password-confirm" placeholder='@Messages("password.new.repeat")'>
                 </div>
             </div>
-            <button id="submit" type="submit" value="submit" class="ui fluid large green submit button">@Messages("sign.in")</button>
+            <input type="hidden" name="uid" value='@uid'>
+            <button id="submit" type="submit" value="submit" class="ui fluid large green submit button">@Messages("confirm")</button>
         </div>
         }
 
@@ -38,17 +39,6 @@
             <div class="content">
                 <div class="header">
                     @Messages("error")
-                </div>
-                <p> @msg</p>
-            </div>
-        </div>
-        }
-        @request.flash.get("success").map { msg =>
-        <div class="ui icon success message">
-            <i class="checkmark icon"></i>
-            <div class="content">
-                <div class="header">
-                    @Messages("success")
                 </div>
                 <p> @msg</p>
             </div>
