added responsive layout for all our phone users

--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -7,44 +7,8 @@
 
 <div class="ui middle aligned center aligned grid">
     <div class="column login-column">
+        <div class="menu-spacer"></div>
         <img class="ui centered medium image" src="/assets/images/wvg_logo_quad.png">
-        <!--<div class="ui three column stackable grid">
-            <div class="column">
-                <a href="/calendar">
-                <div class="ui card">
-                    <div class="padded">
-                    <i class="massive inverted green file icon">
-                    </i>
-                    </div>
-                    <div class="content">
-                        <a class="header">@Messages("apps.files")</a>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="column">
-                <div class="ui card">
-                    <div class="padded">
-                        <i class="massive inverted green calendar icon">
-                        </i>
-                    </div>
-                    <div class="content">
-                        <a class="header">@Messages("apps.calendar")</a>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="ui card">
-                    <div class="padded">
-                        <i class="massive inverted green car icon">
-                        </i>
-                    </div>
-                    <div class="content">
-                        <a class="header">@Messages("apps.carsharing")</a>
-                    </div>
-                </div>
-            </div>
-        </div>-->
     </div>
 </div>
 }
