--- a/app/views/iframe.scala.html
+++ b/app/views/iframe.scala.html
@@ -5,5 +5,5 @@
 @mainLayout(Messages("home.title")) {
     @mainMenu(Option(user))
 
-    <iframe class="fullpage" id="iframe-chat" src="@url"></iframe>
+    <iframe class="fullpage" src="@url"></iframe>
 }
