--- a/app/views/common/mainLayout.scala.html
+++ b/app/views/common/mainLayout.scala.html
@@ -1,17 +1,29 @@
 @(title: String, head: Html = Html("<div></div>"))(body: Html)(implicit request: RequestHeader, messages: Messages)
 <html lang="de">
 <head>
+    <!-- Standard Meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <!-- Site Properties -->
     <title>@title</title>
 
     <script src="/assets/lib/jquery/dist/jquery.min.js"></script>
     <script src="/assets/lib/semantic-ui/dist/semantic.min.js"></script>
+    <script src="/assets/lib/semantic-ui/dist/components/visibility.js"></script>
+    <script src="/assets/lib/semantic-ui/dist/components/sidebar.js"></script>
+    <script src="/assets/lib/semantic-ui/dist/components/transition.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/assets/lib/semantic-ui/dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/mainMenu.css">
 
     @head
 </head>
 <body>
-@body
+    <div class="pusher">
+            @body
+    </div>
 </body>
 </html>
