--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -1,17 +1,46 @@
-@(user: Option[models.User] = None)(implicit messages: Messages)
+@(user: Option[models.User] = None)(implicit request: RequestHeader, messages: Messages)
 
-<div class="ui attached stackable menu">
-    <div class="ui container">
-        <a class="item" href="/"><i class="home icon"></i>@Messages("menu.home")</a>
-        <a class="item" href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
-        <a class="item" href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
-        <a class="item" href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
+@activeLink(currentPath:String) = @{
+    if(request.path.equals(currentPath)) "active"
+}
 
-        <div class="right menu">
+<script>
+  $(document)
+    .ready(function() {
 
+      // create sidebar and attach to menu open
+      $('.ui.sidebar')
+        .sidebar('attach events', '.toc.item')
+      ;
+
+    })
+  ;
+</script>
+
+<!-- Sidebar Menu -->
+<div class="ui vertical inverted sidebar menu">
+    <a class='@activeLink("/") item' href="/"><i class="home icon"></i>@Messages("menu.home")</a>
+    <a class='@activeLink("/files") item' href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
+    <a class='@activeLink("/calendar") item' href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
+    <a class='@activeLink("/carsharing") item' href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
+</div>
+
+
+<div class="ui container menu-spacer">
+    <div class="ui large top fixed secondary pointing menu">
+        <a class="toc item">
+            <i class="sidebar icon"></i>
+        </a>
+
+        <a class='@activeLink("/") item' href="/"><i class="home icon"></i>@Messages("menu.home")</a>
+        <a class='@activeLink("/files") item' href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
+        <a class='@activeLink("/calendar") item' href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
+        <a class='@activeLink("/carsharing") item' href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
+
+        <div class="right item">
             @user.map { u =>
-                <a class="item" href="@routes.ApplicationController.profile"><i class="user icon"></i>@u.fullName</a>
-                <a class="item" href="@routes.ApplicationController.signOut"><i class="sign out icon"></i>@Messages("sign.out")</a>
+            <a class="ui secondary basic button" href="@routes.ApplicationController.profile"><i class="user icon"></i>@u.fullName</a>
+            <a class="ui secondary basic button" href="@routes.ApplicationController.signOut"><i class="sign out icon"></i>@Messages("sign.out")</a>
             }
         </div>
     </div>
