--- a/app/views/password.scala.html
+++ b/app/views/password.scala.html
@@ -5,7 +5,7 @@
 @mainLayout(Messages("home.title")) {
     @mainMenu(Option(user))
 
-    <div class="ui text container" id="menu-spacer">
+    <div class="ui text menu-spacer container">
         <div class="ui grid">
             <div class="six wide column">
                 @sideMenu()
