--- a/app/views/nopassword.scala.html
+++ b/app/views/nopassword.scala.html
@@ -5,7 +5,7 @@
 @import com.mohiva.play.silhouette.impl.providers.oauth2.ClefProvider
 
 @mainLayout(title = Messages("sign.in.title")) {
-<div class="ui middle aligned center aligned grid">
+<div class="ui middle aligned center aligned grid login-page">
     <div class="column login-column">
         <h2 class="ui center aligned header">
             <img src='@routes.Assets.at("images/wvg_logo_quad.png")' class="ui tiny image">
