--- a/app/views/common/sideMenu.scala.html
+++ b/app/views/common/sideMenu.scala.html
@@ -14,4 +14,7 @@
     <a class='@activeLink("/email") item' href="/email">
         @Messages("email.menu")
     </a>
+    <a class='@activeLink("/phone") item' href="/phone">
+        @Messages("phone.menu")
+    </a>
 </div>
