fixed directory sorting, fixed main menu background, added green main menu highlighting

--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="ui container menu-spacer">
-    <div class="ui large top fixed secondary pointing menu">
+    <div class="ui large top fixed secondary green pointing menu">
         <a class="toc item">
             <i class="sidebar icon"></i>
         </a>
