--- a/public/stylesheets/mainMenu.css
+++ b/public/stylesheets/mainMenu.css
@@ -2,6 +2,10 @@
   display: none;
 }
 
+.secondary.pointing.menu {
+  background-color: white;
+}
+
 @media only screen and (max-width: 950px) {
   .secondary.pointing.menu .item,
 
