--- a/app/views/common/mainMenu.scala.html
+++ b/app/views/common/mainMenu.scala.html
@@ -23,6 +23,7 @@
     <a class='@activeLink("/files") item' href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
     <a class='@activeLink("/calendar") item' href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
     <a class='@activeLink("/directory") item' href="/directory"><i class="users icon"></i>@Messages("apps.directory")</a>
+    <a class='@activeLink("/forum") item' href="/directory"><i class="newspaper icon"></i>@Messages("apps.forum")</a>
     <a class='@activeLink("/carsharing") item' href="/carsharing"><i class="car icon"></i>@Messages("apps.carsharing")</a>
 </div>
 
@@ -36,6 +37,7 @@
         <a class='@activeLink("/files") item' href="/files"><i class="file icon"></i>@Messages("apps.files")</a>
         <a class='@activeLink("/calendar") item' href="/calendar"><i class="calendar icon"></i>@Messages("apps.calendar")</a>
         <a class='@activeLink("/directory") item' href="/directory"><i class="users icon"></i>@Messages("apps.directory")</a>
+        <a class='@activeLink("/forum") item' href="/directory"><i class="newspaper icon"></i>@Messages("apps.forum")</a>
 
         <div class="ui dropdown item">
             <i class="caret down icon"></i>@Messages("menu.more")
