fixed url matching new nextcloud urls (fix)

--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -16,15 +16,15 @@
                     <tbody>
                     <tr>
                         <td>@Messages("full.name")</td>
-                        <td class="right aligned">@user.fullName.getOrElse("None")</td>
+                        <td class="right aligned">@user.fullName.getOrElse("")</td>
                     </tr>
                     <tr>
                         <td>@Messages("email")</td>
-                        <td class="right aligned">@user.email.getOrElse("None")</td>
+                        <td class="right aligned">@user.email.getOrElse("")</td>
                     </tr>
                     <tr>
                         <td>@Messages("phone")</td>
-                        <td class="right aligned">@user.phone.getOrElse("None")</td>
+                        <td class="right aligned">@user.phone.getOrElse("")</td>
                     </tr>
                     </tbody>
                 </table>
