--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -28,6 +28,12 @@
                     <input type="password" name="password" placeholder='@Messages("password")'>
                 </div>
             </div>
+            <div class="field">
+                <div class="ui checkbox">
+                    <input type="checkbox" name="rememberMe" value="true">
+                    <label>@Messages("remember.me")</label>
+                </div>
+            </div>
             <button id="submit" type="submit" value="submit" class="ui fluid large green submit button">@Messages("sign.in")</button>
         </div>
         }
