--- a/app/views/directory.scala.html
+++ b/app/views/directory.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, users: Seq[models.User])(implicit request: RequestHeader, messages: Messages)
 
