--- a/app/views/email.scala.html
+++ b/app/views/email.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, emailForm: Form[forms.EmailForm.Data])(implicit request: RequestHeader, messages: Messages)
 
