--- a/app/views/iframe.scala.html
+++ b/app/views/iframe.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, url: String)(implicit request: RequestHeader, messages: Messages)
 
