--- a/app/views/nopassword.scala.html
+++ b/app/views/nopassword.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(signInForm: Form[forms.NoPasswordForm.Data], uid: String)(implicit request: RequestHeader, messages: Messages)
 
