--- a/app/views/proxyframe.scala.html
+++ b/app/views/proxyframe.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, html: Html)(implicit request: RequestHeader, messages: Messages)
 
