--- a/app/views/coinsystem.scala.html
+++ b/app/views/coinsystem.scala.html
@@ -1,70 +1,88 @@
 @import forms.CoinAddForm
 @import models.coin.WorkEntry
+@import controllers.CoinsystemViewLogic
 
-@(user: models.User, workEntries: Seq[WorkEntry], coinAddForm: Form[forms.CoinAddForm.Data])(implicit request: RequestHeader, messages: Messages, lang: play.api.i18n.Lang)
+@(user: models.User, logic: CoinsystemViewLogic, coinAddForm: Form[forms.CoinAddForm.Data])(implicit request: RequestHeader, messages: Messages, lang: play.api.i18n.Lang)
 
 
-@common.mainLayout(title = Messages("home.title"), head = Html("""
+@views.html.common.mainLayout(title = Messages("home.title"), head = Html("""
 <script type="text/javascript" src="/assets/lib/semantic-ui-calendar/dist/calendar.min.js"></script>
 <link rel="stylesheet" href="/assets/lib/semantic-ui-calendar/dist/calendar.min.css" />
 """)) {
-    @common.mainMenu(Option(user))
+    @views.html.common.mainMenu(Option(user))
 
     <div class="ui container menu-spacer">
         @views.html.coin.coinEntryForm(user, coinAddForm)
 
-        @if(workEntries.nonEmpty) {
-        <div class="ui small modal">
-            <div class="ui icon header headline">
-                <i class="remove icon"></i>
-                @Messages("coin.delete.title")
-            </div>
-            <div class="content">
-                <p>@Messages("coin.delete.message")</p>
-            </div>
-            <div class="actions">
-                <div class="ui red cancel button">
+        @if(logic.workEntries.nonEmpty) {
+            <div class="ui small modal">
+                <div class="ui icon header headline">
                     <i class="remove icon"></i>
-                    @Messages("coin.delete.no")
+                    @Messages("coin.delete.title")
                 </div>
-                <a href="" class="coin entry delete">
-                    <div class="ui green ok button">
-                    <i class="checkmark icon"></i>
-                        @Messages("coin.delete.yes")
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <div class="ui section divider"></div>
-        <div class="ui three stackable cards">
-            @for(workEntry <- workEntries) {
-            <div class="card">
                 <div class="content">
-                    <div class="right floated date">
-                        <i class="calendar icon"></i>
-                        @workEntry.dateDone.toString("dd.MM.yyyy", lang.toLocale)
-                    </div>
-                    <div class="header">@workEntry.area</div>
-                    <div class="meta">@workEntry.task</div>
-
-                    <div class="description">
-                        @workEntry.description
-                    </div>
+                    <p>@Messages("coin.delete.message")</p>
                 </div>
-                <div class="extra content">
-                    <i class="clock icon"></i>
-                    @workEntry.prettyTimeSpent
-                    <i class="thumbs up icon"></i>
-                    @workEntry.coins
-                    <div class="right floated coins">
-                        <!--<a href="/coin/remove/@workEntry.id"><i class="remove icon"></i></a>-->
-                        <i class="remove icon" onclick="showDeletePopup(@workEntry.id)"></i>
+                <div class="actions">
+                    <div class="ui red cancel button">
+                        <i class="remove icon"></i>
+                        @Messages("coin.delete.no")
                     </div>
+                    <a href="" class="coin entry delete">
+                        <div class="ui green ok button">
+                        <i class="checkmark icon"></i>
+                            @Messages("coin.delete.yes")
+                        </div>
+                    </a>
                 </div>
             </div>
+
+            <div class="ui section divider"></div>
+            <div class="ui three stackable cards">
+                @for(workEntry <- logic.workEntries) {
+                <div class="card">
+                    <div class="content">
+                        <div class="right floated date">
+                            <i class="calendar icon"></i>
+                            @workEntry.dateDone.toString("dd.MM.yyyy", lang.toLocale)
+                        </div>
+                        <div class="header">@workEntry.area</div>
+                        <div class="meta">@workEntry.task</div>
+
+                        <div class="description">
+                            @workEntry.description
+                        </div>
+                    </div>
+                    <div class="extra content">
+                        <i class="clock icon"></i>
+                        @workEntry.prettyTimeSpent
+                        <i class="thumbs up icon"></i>
+                        @workEntry.coins
+                        <div class="right floated coins">
+                            <!--<a href="/coin/remove/@workEntry.id"><i class="remove icon"></i></a>-->
+                            <i class="remove icon" onclick="showDeletePopup(@workEntry.id)"></i>
+                        </div>
+                    </div>
+                </div>
+                }
+            </div>
+
+
+            @if(logic.showPagination) {
+                <div class="ui section divider"></div>
+                @if(logic.showBackButton) {
+                    <a href="/coin/page/@logic.prevPageNumber">
+                        <button class="ui left floated button">@Messages("pagination.back")</button>
+                    </a>
+                }
+                @if(logic.showNextButton) {
+                    <a href="/coin/page/@logic.nextPageNumber">
+                        <button class="ui right floated button">@Messages("pagination.next")</button>
+                    </a>
+                }
+
             }
-        </div>
+
         }
     </div>
 
