--- a/app/views/password.scala.html
+++ b/app/views/password.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, passwordForm: Form[forms.PasswordForm.Data])(implicit request: RequestHeader, messages: Messages)
 
