--- a/app/views/phone.scala.html
+++ b/app/views/phone.scala.html
@@ -1,4 +1,4 @@
-@import common._
+@import views.html.common._
 
 @(user: models.User, phoneForm: Form[forms.PhoneForm.Data])(implicit request: RequestHeader, messages: Messages)
 
